<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>orbec_container_ros2</name>
  <version>0.1.0</version>
  <description>orbec_container_ros2 contains a launch file for the orbec cam.</description>
  <maintainer email="sanjose.daniel@gmail.com">Daniel San Jose Pro</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
